// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`maxAsyncDownloadTimeDiff global 1`] = `
Array [
  Object {
    "compilation": "9eb9a218218f1ee4ba40",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncDownloadTime": 11.845638877467104,
              "downloadTime": 257.010208932977,
              "initialDownloadTime": 245.16457005550987,
            },
            "before": Object {
              "asyncDownloadTime": 2.6903654399671053,
              "downloadTime": 175.65677040501646,
              "initialDownloadTime": 172.96640496504935,
            },
            "compilation": "9eb9a218218f1ee4ba40",
            "diff": Object {
              "asyncDownloadTime": Object {
                "absolute": 9.1552734375,
                "ok": false,
                "percent": 340.2985074626866,
              },
              "downloadTime": Object {
                "absolute": 81.35343852796052,
                "ok": true,
                "percent": 46.313864441650466,
              },
              "initialDownloadTime": Object {
                "absolute": 72.19816509046052,
                "ok": true,
                "percent": 41.74114915844456,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncDownloadTimeDiff": Object {
                "number": 1,
                "type": "absolute",
              },
              "maxDownloadTimeDiff": Infinity,
              "maxInitialDownloadTimeDiff": Infinity,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download time diff of async assets is 9 ms (340.30%). It's over the 1 ms limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxAsyncDownloadTimeDiff not match - global 1`] = `Array []`;

exports[`maxAsyncDownloadTimeDiff not match - override global 1`] = `Array []`;

exports[`maxAsyncDownloadTimeDiff override global 1`] = `
Array [
  Object {
    "compilation": "9eb9a218218f1ee4ba40",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncDownloadTime": 11.845638877467104,
              "downloadTime": 257.010208932977,
              "initialDownloadTime": 245.16457005550987,
            },
            "before": Object {
              "asyncDownloadTime": 2.6903654399671053,
              "downloadTime": 175.65677040501646,
              "initialDownloadTime": 172.96640496504935,
            },
            "compilation": "9eb9a218218f1ee4ba40",
            "diff": Object {
              "asyncDownloadTime": Object {
                "absolute": 9.1552734375,
                "ok": false,
                "percent": 340.2985074626866,
              },
              "downloadTime": Object {
                "absolute": 81.35343852796052,
                "ok": true,
                "percent": 46.313864441650466,
              },
              "initialDownloadTime": Object {
                "absolute": 72.19816509046052,
                "ok": true,
                "percent": 41.74114915844456,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncDownloadTimeDiff": Object {
                "number": 1,
                "type": "absolute",
              },
              "maxDownloadTimeDiff": Infinity,
              "maxInitialDownloadTimeDiff": Infinity,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download time diff of async assets is 9 ms (340.30%). It's over the 1 ms limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxAsyncDownloadTimeDiff with useCompressedSize = false 1`] = `
Array [
  Object {
    "compilation": "9eb9a218218f1ee4ba40",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncDownloadTime": 24.09282483552632,
              "downloadTime": 608.926070363898,
              "initialDownloadTime": 584.8332455283717,
            },
            "before": Object {
              "asyncDownloadTime": 2.8509842722039473,
              "downloadTime": 249.34065969366776,
              "initialDownloadTime": 246.4896754214638,
            },
            "compilation": "9eb9a218218f1ee4ba40",
            "diff": Object {
              "asyncDownloadTime": Object {
                "absolute": 21.24184056332237,
                "ok": false,
                "percent": 745.0704225352114,
              },
              "downloadTime": Object {
                "absolute": 359.58541067023026,
                "ok": true,
                "percent": 144.21451002496175,
              },
              "initialDownloadTime": Object {
                "absolute": 338.34357010690786,
                "ok": true,
                "percent": 137.26480410523743,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncDownloadTimeDiff": Object {
                "number": 1,
                "type": "absolute",
              },
              "maxDownloadTimeDiff": Infinity,
              "maxInitialDownloadTimeDiff": Infinity,
            },
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download time diff of async assets is 21 ms (745.07%). It's over the 1 ms limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxDownloadTimeDiff global 1`] = `
Array [
  Object {
    "compilation": "9eb9a218218f1ee4ba40",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncDownloadTime": 0,
              "downloadTime": 37.88596705386514,
              "initialDownloadTime": 37.88596705386514,
            },
            "before": Object {
              "asyncDownloadTime": 0,
              "downloadTime": 9.014731959292764,
              "initialDownloadTime": 9.014731959292764,
            },
            "compilation": "9eb9a218218f1ee4ba40",
            "diff": Object {
              "asyncDownloadTime": Object {
                "absolute": 0,
                "ok": true,
                "percent": 0,
              },
              "downloadTime": Object {
                "absolute": 28.871235094572373,
                "ok": false,
                "percent": 320.26726057906455,
              },
              "initialDownloadTime": Object {
                "absolute": 28.871235094572373,
                "ok": true,
                "percent": 320.26726057906455,
              },
            },
            "entry": "one",
            "rule": Object {
              "maxAsyncDownloadTimeDiff": Infinity,
              "maxDownloadTimeDiff": Object {
                "number": 1,
                "type": "absolute",
              },
              "maxInitialDownloadTimeDiff": Infinity,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download time diff of assets is 29 ms (320.27%). It's over the 1 ms limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  Object {
    "compilation": "9eb9a218218f1ee4ba40",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncDownloadTime": 11.845638877467104,
              "downloadTime": 257.010208932977,
              "initialDownloadTime": 245.16457005550987,
            },
            "before": Object {
              "asyncDownloadTime": 2.6903654399671053,
              "downloadTime": 175.65677040501646,
              "initialDownloadTime": 172.96640496504935,
            },
            "compilation": "9eb9a218218f1ee4ba40",
            "diff": Object {
              "asyncDownloadTime": Object {
                "absolute": 9.1552734375,
                "ok": true,
                "percent": 340.2985074626866,
              },
              "downloadTime": Object {
                "absolute": 81.35343852796052,
                "ok": false,
                "percent": 46.313864441650466,
              },
              "initialDownloadTime": Object {
                "absolute": 72.19816509046052,
                "ok": true,
                "percent": 41.74114915844456,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncDownloadTimeDiff": Infinity,
              "maxDownloadTimeDiff": Object {
                "number": 1,
                "type": "absolute",
              },
              "maxInitialDownloadTimeDiff": Infinity,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download time diff of assets is 81 ms (46.31%). It's over the 1 ms limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxDownloadTimeDiff not match - global 1`] = `Array []`;

exports[`maxDownloadTimeDiff not match - override global 1`] = `Array []`;

exports[`maxDownloadTimeDiff override global 1`] = `
Array [
  Object {
    "compilation": "9eb9a218218f1ee4ba40",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncDownloadTime": 0,
              "downloadTime": 37.88596705386514,
              "initialDownloadTime": 37.88596705386514,
            },
            "before": Object {
              "asyncDownloadTime": 0,
              "downloadTime": 9.014731959292764,
              "initialDownloadTime": 9.014731959292764,
            },
            "compilation": "9eb9a218218f1ee4ba40",
            "diff": Object {
              "asyncDownloadTime": Object {
                "absolute": 0,
                "ok": true,
                "percent": 0,
              },
              "downloadTime": Object {
                "absolute": 28.871235094572373,
                "ok": false,
                "percent": 320.26726057906455,
              },
              "initialDownloadTime": Object {
                "absolute": 28.871235094572373,
                "ok": true,
                "percent": 320.26726057906455,
              },
            },
            "entry": "one",
            "rule": Object {
              "maxAsyncDownloadTimeDiff": Infinity,
              "maxDownloadTimeDiff": Object {
                "number": 1,
                "type": "absolute",
              },
              "maxInitialDownloadTimeDiff": Infinity,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download time diff of assets is 29 ms (320.27%). It's over the 1 ms limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  Object {
    "compilation": "9eb9a218218f1ee4ba40",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncDownloadTime": 11.845638877467104,
              "downloadTime": 257.010208932977,
              "initialDownloadTime": 245.16457005550987,
            },
            "before": Object {
              "asyncDownloadTime": 2.6903654399671053,
              "downloadTime": 175.65677040501646,
              "initialDownloadTime": 172.96640496504935,
            },
            "compilation": "9eb9a218218f1ee4ba40",
            "diff": Object {
              "asyncDownloadTime": Object {
                "absolute": 9.1552734375,
                "ok": true,
                "percent": 340.2985074626866,
              },
              "downloadTime": Object {
                "absolute": 81.35343852796052,
                "ok": false,
                "percent": 46.313864441650466,
              },
              "initialDownloadTime": Object {
                "absolute": 72.19816509046052,
                "ok": true,
                "percent": 41.74114915844456,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncDownloadTimeDiff": Infinity,
              "maxDownloadTimeDiff": Object {
                "number": 1,
                "type": "absolute",
              },
              "maxInitialDownloadTimeDiff": Infinity,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download time diff of assets is 81 ms (46.31%). It's over the 1 ms limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxDownloadTimeDiff with useCompressedSize = false 1`] = `
Array [
  Object {
    "compilation": "9eb9a218218f1ee4ba40",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncDownloadTime": 0,
              "downloadTime": 167.60575143914474,
              "initialDownloadTime": 167.60575143914474,
            },
            "before": Object {
              "asyncDownloadTime": 0,
              "downloadTime": 16.041805869654606,
              "initialDownloadTime": 16.041805869654606,
            },
            "compilation": "9eb9a218218f1ee4ba40",
            "diff": Object {
              "asyncDownloadTime": Object {
                "absolute": 0,
                "ok": true,
                "percent": 0,
              },
              "downloadTime": Object {
                "absolute": 151.56394556949013,
                "ok": false,
                "percent": 944.8060075093867,
              },
              "initialDownloadTime": Object {
                "absolute": 151.56394556949013,
                "ok": true,
                "percent": 944.8060075093867,
              },
            },
            "entry": "one",
            "rule": Object {
              "maxAsyncDownloadTimeDiff": Infinity,
              "maxDownloadTimeDiff": Object {
                "number": 1,
                "type": "absolute",
              },
              "maxInitialDownloadTimeDiff": Infinity,
            },
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download time diff of assets is 152 ms (944.81%). It's over the 1 ms limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  Object {
    "compilation": "9eb9a218218f1ee4ba40",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncDownloadTime": 24.09282483552632,
              "downloadTime": 608.926070363898,
              "initialDownloadTime": 584.8332455283717,
            },
            "before": Object {
              "asyncDownloadTime": 2.8509842722039473,
              "downloadTime": 249.34065969366776,
              "initialDownloadTime": 246.4896754214638,
            },
            "compilation": "9eb9a218218f1ee4ba40",
            "diff": Object {
              "asyncDownloadTime": Object {
                "absolute": 21.24184056332237,
                "ok": true,
                "percent": 745.0704225352114,
              },
              "downloadTime": Object {
                "absolute": 359.58541067023026,
                "ok": false,
                "percent": 144.21451002496175,
              },
              "initialDownloadTime": Object {
                "absolute": 338.34357010690786,
                "ok": true,
                "percent": 137.26480410523743,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncDownloadTimeDiff": Infinity,
              "maxDownloadTimeDiff": Object {
                "number": 1,
                "type": "absolute",
              },
              "maxInitialDownloadTimeDiff": Infinity,
            },
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download time diff of assets is 360 ms (144.21%). It's over the 1 ms limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxInitialDownloadTimeDiff global 1`] = `
Array [
  Object {
    "compilation": "9eb9a218218f1ee4ba40",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncDownloadTime": 0,
              "downloadTime": 37.88596705386514,
              "initialDownloadTime": 37.88596705386514,
            },
            "before": Object {
              "asyncDownloadTime": 0,
              "downloadTime": 9.014731959292764,
              "initialDownloadTime": 9.014731959292764,
            },
            "compilation": "9eb9a218218f1ee4ba40",
            "diff": Object {
              "asyncDownloadTime": Object {
                "absolute": 0,
                "ok": true,
                "percent": 0,
              },
              "downloadTime": Object {
                "absolute": 28.871235094572373,
                "ok": true,
                "percent": 320.26726057906455,
              },
              "initialDownloadTime": Object {
                "absolute": 28.871235094572373,
                "ok": false,
                "percent": 320.26726057906455,
              },
            },
            "entry": "one",
            "rule": Object {
              "maxAsyncDownloadTimeDiff": Infinity,
              "maxDownloadTimeDiff": Infinity,
              "maxInitialDownloadTimeDiff": Object {
                "number": 1,
                "type": "absolute",
              },
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download time diff of initial assets is 29 ms (320.27%). It's over the 1 ms limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  Object {
    "compilation": "9eb9a218218f1ee4ba40",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncDownloadTime": 11.845638877467104,
              "downloadTime": 257.010208932977,
              "initialDownloadTime": 245.16457005550987,
            },
            "before": Object {
              "asyncDownloadTime": 2.6903654399671053,
              "downloadTime": 175.65677040501646,
              "initialDownloadTime": 172.96640496504935,
            },
            "compilation": "9eb9a218218f1ee4ba40",
            "diff": Object {
              "asyncDownloadTime": Object {
                "absolute": 9.1552734375,
                "ok": true,
                "percent": 340.2985074626866,
              },
              "downloadTime": Object {
                "absolute": 81.35343852796052,
                "ok": true,
                "percent": 46.313864441650466,
              },
              "initialDownloadTime": Object {
                "absolute": 72.19816509046052,
                "ok": false,
                "percent": 41.74114915844456,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncDownloadTimeDiff": Infinity,
              "maxDownloadTimeDiff": Infinity,
              "maxInitialDownloadTimeDiff": Object {
                "number": 1,
                "type": "absolute",
              },
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download time diff of initial assets is 72 ms (41.74%). It's over the 1 ms limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxInitialDownloadTimeDiff not match - global 1`] = `Array []`;

exports[`maxInitialDownloadTimeDiff not match - override global 1`] = `Array []`;

exports[`maxInitialDownloadTimeDiff override global 1`] = `
Array [
  Object {
    "compilation": "9eb9a218218f1ee4ba40",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncDownloadTime": 0,
              "downloadTime": 37.88596705386514,
              "initialDownloadTime": 37.88596705386514,
            },
            "before": Object {
              "asyncDownloadTime": 0,
              "downloadTime": 9.014731959292764,
              "initialDownloadTime": 9.014731959292764,
            },
            "compilation": "9eb9a218218f1ee4ba40",
            "diff": Object {
              "asyncDownloadTime": Object {
                "absolute": 0,
                "ok": true,
                "percent": 0,
              },
              "downloadTime": Object {
                "absolute": 28.871235094572373,
                "ok": true,
                "percent": 320.26726057906455,
              },
              "initialDownloadTime": Object {
                "absolute": 28.871235094572373,
                "ok": false,
                "percent": 320.26726057906455,
              },
            },
            "entry": "one",
            "rule": Object {
              "maxAsyncDownloadTimeDiff": Infinity,
              "maxDownloadTimeDiff": Infinity,
              "maxInitialDownloadTimeDiff": Object {
                "number": 1,
                "type": "absolute",
              },
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download time diff of initial assets is 29 ms (320.27%). It's over the 1 ms limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  Object {
    "compilation": "9eb9a218218f1ee4ba40",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncDownloadTime": 11.845638877467104,
              "downloadTime": 257.010208932977,
              "initialDownloadTime": 245.16457005550987,
            },
            "before": Object {
              "asyncDownloadTime": 2.6903654399671053,
              "downloadTime": 175.65677040501646,
              "initialDownloadTime": 172.96640496504935,
            },
            "compilation": "9eb9a218218f1ee4ba40",
            "diff": Object {
              "asyncDownloadTime": Object {
                "absolute": 9.1552734375,
                "ok": true,
                "percent": 340.2985074626866,
              },
              "downloadTime": Object {
                "absolute": 81.35343852796052,
                "ok": true,
                "percent": 46.313864441650466,
              },
              "initialDownloadTime": Object {
                "absolute": 72.19816509046052,
                "ok": false,
                "percent": 41.74114915844456,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncDownloadTimeDiff": Infinity,
              "maxDownloadTimeDiff": Infinity,
              "maxInitialDownloadTimeDiff": Object {
                "number": 1,
                "type": "absolute",
              },
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download time diff of initial assets is 72 ms (41.74%). It's over the 1 ms limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxInitialDownloadTimeDiff with useCompressedSize = false 1`] = `
Array [
  Object {
    "compilation": "9eb9a218218f1ee4ba40",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncDownloadTime": 0,
              "downloadTime": 167.60575143914474,
              "initialDownloadTime": 167.60575143914474,
            },
            "before": Object {
              "asyncDownloadTime": 0,
              "downloadTime": 16.041805869654606,
              "initialDownloadTime": 16.041805869654606,
            },
            "compilation": "9eb9a218218f1ee4ba40",
            "diff": Object {
              "asyncDownloadTime": Object {
                "absolute": 0,
                "ok": true,
                "percent": 0,
              },
              "downloadTime": Object {
                "absolute": 151.56394556949013,
                "ok": true,
                "percent": 944.8060075093867,
              },
              "initialDownloadTime": Object {
                "absolute": 151.56394556949013,
                "ok": false,
                "percent": 944.8060075093867,
              },
            },
            "entry": "one",
            "rule": Object {
              "maxAsyncDownloadTimeDiff": Infinity,
              "maxDownloadTimeDiff": Infinity,
              "maxInitialDownloadTimeDiff": Object {
                "number": 1,
                "type": "absolute",
              },
            },
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download time diff of initial assets is 152 ms (944.81%). It's over the 1 ms limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  Object {
    "compilation": "9eb9a218218f1ee4ba40",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncDownloadTime": 24.09282483552632,
              "downloadTime": 608.926070363898,
              "initialDownloadTime": 584.8332455283717,
            },
            "before": Object {
              "asyncDownloadTime": 2.8509842722039473,
              "downloadTime": 249.34065969366776,
              "initialDownloadTime": 246.4896754214638,
            },
            "compilation": "9eb9a218218f1ee4ba40",
            "diff": Object {
              "asyncDownloadTime": Object {
                "absolute": 21.24184056332237,
                "ok": true,
                "percent": 745.0704225352114,
              },
              "downloadTime": Object {
                "absolute": 359.58541067023026,
                "ok": true,
                "percent": 144.21451002496175,
              },
              "initialDownloadTime": Object {
                "absolute": 338.34357010690786,
                "ok": false,
                "percent": 137.26480410523743,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncDownloadTimeDiff": Infinity,
              "maxDownloadTimeDiff": Infinity,
              "maxInitialDownloadTimeDiff": Object {
                "number": 1,
                "type": "absolute",
              },
            },
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download time diff of initial assets is 338 ms (137.26%). It's over the 1 ms limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;
